add style to currently reading section

--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -1,7 +1,7 @@
 @import './colors.scss';
 
 .content {
-    background-color: $backgroundColor;
+    // background-color: $backgroundColor;
     width: 100%;
     height: 100vh;   
 }
