--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -78,11 +78,14 @@
     margin: 20px auto;
   }
   .swiper-wrapper {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    // grid-column-gap: 3rem;
   }
   .swiper-slide {
-    text-align: center;
-     /* Center slide text vertically */
+    grid-row: 1/-1;
+    font-size: 1.8rem;
+    /* Center slide text vertically */
     display: -webkit-box;
     display: -ms-flexbox;
     display: -webkit-flex;
@@ -90,6 +93,51 @@
     -ms-flex-pack: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
+  }
+
+  .card-container {
+    padding: 2.2rem;
+    width: 37rem;
+    height: 20rem;
+    flex: 2;
+    display: flex;
+    border-radius: 1rem;
+    background-image: linear-gradient(
+      109.6deg,
+      rgb(185, 236, 252) 11.2%,
+      rgba(89, 173, 252, 0.205) 91.1%
+    );
+    box-shadow: 0px 0px 30px -10px rgb(212, 212, 212);
+    transition: all 0.2s;
+    &:hover {
+      transform: scale(1.08);
+    }
+  }
+
+  .card-img {
+    width: 14rem;
+    border-radius: 0.5rem;
+
+    & img {
+      width: 13rem;
+      height: 19rem;
+      box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.205);
+      border-radius: 0.5rem;
+    }
+  }
+
+  .card-info {
+    padding: 1.5rem;
+
+    &__title {
+      font-size: 1.5rem;
+      font-weight: 700;
+    }
+    &__author {
+      margin-top: 0.5rem;
+      font-size: 1.2rem;
+      color: grey;
+    }
   }
 }
 
