--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -96,17 +96,12 @@
   }
 
   .card-container {
-    padding: 2.2rem;
     width: 37rem;
-    height: 20rem;
+    height: 19rem;
     flex: 2;
     display: flex;
     border-radius: 1rem;
-    background-image: linear-gradient(
-      109.6deg,
-      rgb(185, 236, 252) 11.2%,
-      rgba(89, 173, 252, 0.205) 91.1%
-    );
+    background-color: #fff1bc;
     box-shadow: 0px 0px 30px -10px rgb(212, 212, 212);
     transition: all 0.2s;
     &:hover {
@@ -115,8 +110,9 @@
   }
 
   .card-img {
-    width: 14rem;
+    width: 45%;
     border-radius: 0.5rem;
+    padding: 2.2rem;
 
     & img {
       width: 13rem;
@@ -127,16 +123,56 @@
   }
 
   .card-info {
-    padding: 1.5rem;
-
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    padding: 2.2rem;
     &__title {
       font-size: 1.5rem;
       font-weight: 700;
+      max-height: 4rem;
+      overflow-y: hidden;
     }
     &__author {
       margin-top: 0.5rem;
       font-size: 1.2rem;
       color: grey;
+      margin-bottom: 1rem;
+    }
+
+    &__rating {
+        flex: 1;
+      display: flex;
+      & > * {
+        margin-right: 0.3rem;
+        font-size: 1.3rem;
+      }
+      .react-rater-star {
+        cursor: pointer;
+        color: rgb(190, 190, 190);
+        position: relative;
+        &.will-be-active {
+          //   color: $react-rater-hover;
+        }
+        &.is-active {
+          color: #f6c90e;
+        }
+        &.is-active-half:before {
+          color: #f6c90e;
+          content: "\2605";
+          position: absolute;
+          left: 0;
+          width: 50%;
+          overflow: hidden;
+        }
+        &.is-disabled {
+          cursor: default;
+        }
+      }
+    }
+    &__button {
+        height: 3rem;
     }
   }
 }
