--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -4,189 +4,242 @@
   padding: 3rem 1rem;
   display: grid;
   grid-template-columns: 1rem repeat(8, 1fr) 1rem;
+  grid-template-rows: repeat(3, min-content) 5rem;
   grid-row-gap: 3rem;
   grid-column-gap: 3rem;
   height: inherit;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
+//---------sectionControl-----------
+.control-section {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  margin-bottom: 2rem;
+  &-text {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: flex-end;
+
+    &__books-num {
+      font-size: 1.2rem;
+      font-weight: 700;
+      background-color: rgba(#000000, 0.07);
+      width: 2.4rem;
+      line-height: 2.4rem;
+      border-radius: 50%;
+      text-align: center;
+      margin-left: 1rem;
+    }
+  }
+
+  &-action {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0;
+
+    &__back--current,
+    &__back--r,
+    &__back--wantTo {
+      background-image: url(../icons/left-arrow.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+      width: 2.5rem;
+      height: 2.5rem;
+      margin-right: 1.5rem;
+      transition: all 0.2s;
+      cursor: pointer;
+      opacity: 0.2;
+      &:active {
+        transform: scale(1.1);
+      }
+    }
+
+    &__next--current,
+    &__next--r,
+    &__next--wantTo {
+      background-image: url(../icons/right-arrow.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+      width: 2.5rem;
+      height: 2.5rem;
+      transition: all 0.2s;
+      cursor: pointer;
+      opacity: 0.2;
+      &:active {
+        transform: scale(1.1);
+      }
+    }
+  }
+}
 //-----currently-reading--------
 .cr-container {
   grid-column: 2/10;
   grid-row: 1/2;
-  // background-color: $primaryColor;
+  //   background-color: $primaryColor;
+}
 
-  .control-section {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
+.current-swiper-container,
+.wantTo-swiper-container {
+  width: 100%;
+  margin: 2rem auto;
+}
+.swiper-wrapper {
+  display: flex;
+}
 
-    &-text {
-      display: flex;
-      flex-wrap: nowrap;
-      align-items: flex-end;
-
-      &__books-num {
-        font-size: 1.2rem;
-        font-weight: 700;
-        background-color: rgba(#000000, 0.07);
-        width: 2.4rem;
-        line-height: 2.4rem;
-        border-radius: 50%;
-        text-align: center;
-        margin-left: 1rem;
-      }
-    }
-
-    &-action {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 0;
-
-      &__back {
-        background-image: url(../icons/left-arrow.svg);
-        background-repeat: no-repeat;
-        background-position: center;
-        width: 2.5rem;
-        height: 2.5rem;
-        margin-right: 1.5rem;
-        transition: all 0.2s;
-        cursor: pointer;
-        &:active {
-          transform: scale(1.1);
-        }
-      }
-
-      &__next {
-        background-image: url(../icons/right-arrow.svg);
-        background-repeat: no-repeat;
-        background-position: center;
-        width: 2.5rem;
-        height: 2.5rem;
-        transition: all 0.2s;
-        cursor: pointer;
-        &:active {
-          transform: scale(1.1);
-        }
-      }
-    }
+.CurrentlyReadingCard-container {
+  width: 35rem;
+  height: 19rem;
+  flex: 2;
+  display: flex;
+  border-radius: 1rem;
+  background-image: linear-gradient(-20deg, #e9defa 0%, #fbfcdb 100%);
+  background-color: #bdbdd7;
+  box-shadow: 0px 0px 30px -10px rgb(212, 212, 212);
+  transition: all 0.2s;
+  &:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 0px 40px -10px rgb(209, 209, 209);
   }
+  margin-bottom: 4rem;
+}
 
-  .swiper-container {
-    width: 100%;
-    margin: 20px auto;
-  }
-  .swiper-wrapper {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    // grid-column-gap: 3rem;
-  }
-  .swiper-slide {
-    grid-row: 1/-1;
-    font-size: 1.8rem;
-    /* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-  }
+.card-container {
+  display: flex;
+  width: 100%;
+}
 
-  .card-container {
-    width: 37rem;
+.card-img {
+  border-radius: 0.5rem;
+  padding: 2rem;
+
+  & img {
+    width: 13rem;
     height: 19rem;
-    flex: 2;
-    display: flex;
-    border-radius: 1rem;
-    background-color: #fff1bc;
-    box-shadow: 0px 0px 30px -10px rgb(212, 212, 212);
-    transition: all 0.2s;
-    &:hover {
-      transform: scale(1.08);
-    }
-  }
-
-  .card-img {
-    width: 45%;
+    box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.205);
     border-radius: 0.5rem;
-    padding: 2.2rem;
+  }
+}
 
-    & img {
-      width: 13rem;
-      height: 19rem;
-      box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.205);
-      border-radius: 0.5rem;
-    }
+.card-info {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 2.2rem 2rem 2.2rem 0;
+  &__title {
+    font-size: 1.4rem;
+    max-height: 4rem;
+    font-weight: 700;
+    overflow-y: hidden;
+  }
+  &__author {
+    margin-top: 0.5rem;
+    font-size: 1.2rem;
+    color: grey;
+    margin-bottom: 1rem;
   }
 
-  .card-info {
+  &__rating {
+    flex: 1;
     display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    padding: 2.2rem;
-    &__title {
-      font-size: 1.5rem;
-      font-weight: 700;
-      max-height: 4rem;
-      overflow-y: hidden;
+    & > * {
+      margin-right: 0.3rem;
+      font-size: 1.3rem;
     }
-    &__author {
-      margin-top: 0.5rem;
-      font-size: 1.2rem;
-      color: grey;
-      margin-bottom: 1rem;
-    }
-
-    &__rating {
-        flex: 1;
-      display: flex;
-      & > * {
-        margin-right: 0.3rem;
-        font-size: 1.3rem;
+    .react-rater-star {
+      cursor: pointer;
+      color: rgb(190, 190, 190);
+      position: relative;
+      &.will-be-active {
+        //   color: $react-rater-hover;
       }
-      .react-rater-star {
-        cursor: pointer;
-        color: rgb(190, 190, 190);
-        position: relative;
-        &.will-be-active {
-          //   color: $react-rater-hover;
-        }
-        &.is-active {
-          color: #f6c90e;
-        }
-        &.is-active-half:before {
-          color: #f6c90e;
-          content: "\2605";
-          position: absolute;
-          left: 0;
-          width: 50%;
-          overflow: hidden;
-        }
-        &.is-disabled {
-          cursor: default;
-        }
+      &.is-active {
+        color: #f6c90e;
       }
-    }
-    &__button {
-        height: 3rem;
+      &.is-active-half:before {
+        color: #f6c90e;
+        content: "\2605";
+        position: absolute;
+        left: 0;
+        width: 50%;
+        overflow: hidden;
+      }
+      &.is-disabled {
+        cursor: default;
+      }
     }
   }
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+  &-button {
+    width: 100%;
+    height: 3rem;
+    border-radius: 0.6rem;
+    background-color: #dd105e;
+    color: white;
+    border: 0;
+    transition: all 0.2s;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    box-shadow: 0px 0px 1rem 0rem rgba(0, 0, 0, 0.205);
+    outline: none;
+    z-index: 2;
+    position: relative;
+
+    // line-height: 1;
+    &:hover {
+      background-color: #ca0e56;
+    }
+  }
+
+  &-choices {
+    width: 16rem;
+    display: none;
+    position: absolute;
+    margin-top: 0.4rem;
+    background-color: #f9f9f9;
+    min-width: 1.6rem;
+    box-shadow: 0 0.8rem 1.6rem 0 rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    & a {
+      float: none;
+      color: black;
+      padding: 0.7rem 1rem;
+      text-decoration: none;
+      display: block;
+      text-align: left;
+      cursor: pointer;
+      transition: all 0.2s;
+      border-radius: 0.4rem;
+
+      &:hover {
+        background-color: rgb(226, 226, 226);
+      }
+    }
+  }
+}
+
+.show {
+  display: block;
 }
 
 //------want-to-read---------
 .wtr-container {
-  grid-column: 2/7;
+  grid-column: 2/10;
   grid-row: 2/3;
-  background-color: $secondaryColor;
+  //   overflow: hidden;
 }
 
 //--------------read---------------
 .r-container {
-  grid-column: 7/10;
-  grid-row: 2/3;
-  background-color: grey;
+  grid-column: 2/10;
+  grid-row: 3/4;
+  //   background-color: grey;
 }
