add Image for books without image also provide a msg if the book come without author nama & change the css for home page

--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -81,6 +81,11 @@
         letter-spacing: .3rem;
         text-align: center;
     }
+
+    & ~ p span{
+        font-size: 2rem;
+        color: #ab88e0;
+    }
 }
 
 
