--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -2,6 +2,8 @@
 
 .content {
     // background-color: $backgroundColor;
-    width: 100%;
-    margin-left: 27rem;
+    // width: 100%;
+    flex: 1;
+    overflow: hidden;
+    // margin-left: 27rem;
 }
