--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -1,11 +1,11 @@
 @import "./colors.scss";
 
 .nav-container {
-  height: 100%;
+  // height: 100%;
+  // width: 27rem;
   width: 27rem;
-  position: fixed;
-  z-index: 1;
-  overflow-x: hidden;
+  position: sticky;
+  // overflow-x: hidden;
   background-color: white;
   font-size: 1.5rem;
   z-index: 100;
