add bookshelf pages and filter functionality & fix some of css problems

--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -54,7 +54,7 @@
     }
   }
   .sidenav-item:hover:not(.sidenav-item__active) {
-    background-color: grey;
+    background-color: rgb(221, 221, 221);
     border-radius: 0.5rem;
     // transform: scale(1.07);
   }
