--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -15,6 +15,7 @@
   flex-wrap: nowrap;
   justify-content: space-between;
   margin-bottom: 2rem;
+  padding-left: 1rem;
   &-text {
     display: flex;
     flex-wrap: nowrap;
@@ -173,8 +174,6 @@
 }
 
 .dropdown {
-  float: left;
-  overflow: hidden;
   &-button {
     width: 100%;
     height: 3rem;
