--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -38,9 +38,8 @@
     align-self: stretch;
     margin-top: 4rem;
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(27rem,1fr));
+    grid-template-columns: repeat(auto-fill,minmax(27rem,1fr));
     grid-gap: 1.2rem;
-
 }
 
 .book{
@@ -50,20 +49,23 @@
 }
 
 .search-Img{
-    margin-top: 12rem;
-    width: 65rem;
+    margin-top: 8rem;
+    width: 75rem;
     filter: invert(6%) sepia(79%) saturate(1) hue-rotate(611deg) brightness(356%) contrast(93%);
 
     & ~ p{
-        font-size: 1.8rem;
+        font-size: 2rem;
         font-weight: 500;
-        text-transform: uppercase;
-        color: rgb(209, 209, 209);
-        margin-top: -37rem;
+        color: rgb(153, 153, 153);
+        margin-top: -5rem;
         letter-spacing: .3rem;
         text-align: left;
-        width: 22rem;
-        margin-left: 12rem;
+        margin-left: 15rem;
+    }
+
+    & ~ p span{
+        font-size: 2rem;
+        color: #ab88e0;
     }
 }
 
@@ -76,16 +78,17 @@
     & ~ p{
         font-size: 1.8rem;
         font-weight: 500;
-        color: rgb(187, 187, 187);
+        color: rgb(153, 153, 153);
         margin-top: -6rem;
         letter-spacing: .3rem;
         text-align: center;
     }
 
     & ~ p span{
-        font-size: 2rem;
+        font-size: 2.5rem;
         color: #ab88e0;
     }
 }
+
 
 
