--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -1,3 +1,9 @@
+
+$bp-largest: 80em;
+$bp-large: 56.25em;
+$bp-md: 43.75em;
+$bp-sm: 35em;
+
 .search-container {
   padding: 6rem 6rem;
   display: flex;
@@ -39,6 +45,16 @@
     margin-top: 4rem;
     display: grid;
     grid-template-columns: repeat(auto-fill,minmax(27rem,1fr));
+
+    @media only screen and (max-width: $bp-md) {
+        grid-template-columns: repeat(auto-fill,minmax(35rem,1fr));
+    }
+
+    @media only screen and (max-width: $bp-large) {
+        grid-template-columns: repeat(auto-fill,minmax(35rem,1fr));
+    }
+    
+
     grid-gap: 1.2rem;
 }
 
