--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -27,6 +27,11 @@ $bp-sm: 35em;
     border: none;
     background-color: #ececec;
     box-shadow: 0 1px 15px -3px rgba(0, 0, 0, 0.082), 0 1px 6px -2px rgba(0, 0, 0, 0.014);
+
+    @media only screen and (max-width: $bp-sm) {
+        width:40rem;
+    }
+
     &:focus {
         outline: none;
     }
@@ -67,9 +72,21 @@ $bp-sm: 35em;
 .search-Img{
     margin-top: 8rem;
     width: 75rem;
+
+    @media only screen and (max-width: $bp-sm) {
+        width:50rem;
+    }
+
     filter: invert(6%) sepia(79%) saturate(1) hue-rotate(611deg) brightness(356%) contrast(93%);
 
     & ~ p{
+
+        @media only screen and (max-width: $bp-sm) {
+            margin-top: -3rem;
+            margin-left: 12rem;
+
+        }
+
         font-size: 2rem;
         font-weight: 500;
         color: rgb(153, 153, 153);
@@ -89,6 +106,11 @@ $bp-sm: 35em;
 .search-Error{
     margin-top: 8rem;
     width: 75rem;
+
+    @media only screen and (max-width: $bp-sm) {
+        width:50rem;
+    }
+
     filter: invert(80%) sepia(79%) saturate(1) hue-rotate(211deg) brightness(356%) contrast(93%);
 
     & ~ p{
@@ -98,9 +120,15 @@ $bp-sm: 35em;
         margin-top: -6rem;
         letter-spacing: .3rem;
         text-align: center;
+        @media only screen and (max-width: $bp-sm) {
+            font-size: 1.5rem;
+        }
     }
 
     & ~ p span{
+        @media only screen and (max-width: $bp-sm) {
+            font-size: 2rem;
+        }
         font-size: 2.5rem;
         color: #ab88e0;
     }
