--- a/src/styles/shelf.scss
+++ b/src/styles/shelf.scss
@@ -25,6 +25,9 @@ $bp-sm: 35em;
 
 
 .shelf-top{
+
+    
+
     flex: 1;
     padding-left: 1rem;
     display: flex;
@@ -32,7 +35,13 @@ $bp-sm: 35em;
 }
 
 .shelf-dropdown {
+  
     &-button {
+      @media only screen and (max-width: $bp-sm) {
+        width: 14rem;
+
+      }
+
       width: 18rem;
       height: 3.6rem;
       border-radius: 0.6rem;
