fix warnings msg

--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -233,7 +233,7 @@ $bp-sm: 35em;
     z-index: 1;
     border-radius: 0.5rem;
     padding: 1rem;
-    & a {
+    & div {
       float: none;
       color: black;
       padding: 0.7rem 1rem;
