--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -13,6 +13,13 @@ $bp-sm: 35em;
     width: 100%;
     background-image: linear-gradient(-20deg, #e9defa 0%, #fbfcdb 100%);
   }
+
+  @media only screen and (max-width: $bp-sm){
+    // display: flex;
+    // justify-content: space-between;
+    align-items: center;
+  }
+
   width: 27rem;
   position: sticky;
   // overflow-x: hidden;
@@ -29,6 +36,14 @@ $bp-sm: 35em;
       margin-top: 3rem;
       margin-bottom: 2.5rem;
       font-size: 4rem;
+    }
+
+    @media only screen and (max-width: $bp-sm){
+      margin-top: 0rem;
+      margin-bottom: 0rem;
+      font-size: 3rem;
+      padding: 2rem;
+      float: left;
     }
     
     font-size: 3.5rem;
@@ -47,6 +62,7 @@ $bp-sm: 35em;
 
     width: 22rem;
     padding-left: 5rem;
+    
     @media only screen and (max-width: $bp-large){
       display: flex;
       flex-wrap: wrap;
@@ -58,7 +74,13 @@ $bp-sm: 35em;
       padding: 1rem;
     }
 
-
+    @media only screen and (max-width: $bp-sm){
+      flex-direction: column;
+      justify-content: stretch;
+      align-items: stretch;
+      display: none;
+    }
+    
     &-section {
       margin-bottom: 4rem;
       @media only screen and (max-width: $bp-large){
@@ -66,7 +88,12 @@ $bp-sm: 35em;
         align-items: center;
         justify-content: center;
         margin: 0;
-        
+      }
+
+      @media only screen and (max-width: $bp-sm){
+        flex-direction: column;
+        align-items: stretch;
+        justify-content: flex-start;
       }
     }
 
@@ -86,6 +113,10 @@ $bp-sm: 35em;
         align-items: center;
         padding: .5rem 2rem;
         margin: .5rem;
+      }
+
+      @media only screen and (max-width: $bp-sm){
+        justify-content: flex-start;
       }
       display: flex;
       padding-left: 1rem;
@@ -114,5 +145,21 @@ $bp-sm: 35em;
   .sidenav-item__active {
     background-color: #e9defa94;
     border-radius: 0.5rem;
+  }
+}
+
+.menuIcon{
+  display: none;
+  width: 3rem;
+  margin: 2.7rem;
+  @media only screen and (max-width: $bp-sm){
+    display: block;
+    float: right;
+  }
+}
+
+.showMenu{
+  @media only screen and (max-width: $bp-sm){
+    display: flex;
   }
 }
