--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -1,5 +1,7 @@
 @import "./colors.scss";
 
+
+
 $bp-largest: 80em;
 $bp-large: 56.25em;
 $bp-md: 43.75em;
@@ -38,7 +40,7 @@ $bp-sm: 35em;
       font-size: 4rem;
     }
 
-    @media only screen and (max-width: $bp-sm){
+    @media only screen and (max-width: $bp-md){
       margin-top: 0rem;
       margin-bottom: 0rem;
       font-size: 3rem;
@@ -58,8 +60,9 @@ $bp-sm: 35em;
     }
   }
 
-  .sidenav {
 
+
+  .sidenav {
     width: 22rem;
     padding-left: 5rem;
     
@@ -74,7 +77,7 @@ $bp-sm: 35em;
       padding: 1rem;
     }
 
-    @media only screen and (max-width: $bp-sm){
+    @media only screen and (max-width: $bp-md){
       flex-direction: column;
       justify-content: stretch;
       align-items: stretch;
@@ -90,7 +93,7 @@ $bp-sm: 35em;
         margin: 0;
       }
 
-      @media only screen and (max-width: $bp-sm){
+      @media only screen and (max-width: $bp-md){
         flex-direction: column;
         align-items: stretch;
         justify-content: flex-start;
@@ -115,7 +118,7 @@ $bp-sm: 35em;
         margin: .5rem;
       }
 
-      @media only screen and (max-width: $bp-sm){
+      @media only screen and (max-width: $bp-md){
         justify-content: flex-start;
       }
       display: flex;
@@ -146,20 +149,24 @@ $bp-sm: 35em;
     background-color: #e9defa94;
     border-radius: 0.5rem;
   }
+
+  .showMenu{
+    @media only screen and (max-width: $bp-md){
+      display: flex;
+    }
+  }
+
 }
+
+
 
 .menuIcon{
   display: none;
   width: 3rem;
   margin: 2.7rem;
-  @media only screen and (max-width: $bp-sm){
+  @media only screen and (max-width: $bp-md){
     display: block;
     float: right;
   }
 }
 
-.showMenu{
-  @media only screen and (max-width: $bp-sm){
-    display: flex;
-  }
-}
